<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_partidos"
        android:icon="@drawable/ic_counter_black_24dp"
        android:title="@string/title_matches" />

    <item
        android:id="@+id/navigation_ahora"
        android:icon="@drawable/ic_clock_black_24dp"
        android:title="@string/title_now" />

    <item
        android:id="@+id/navigation_mis_partidos"
        android:icon="@drawable/ic_tennis_black_24dp"
        android:title="@string/title_my_matches" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_trophy_black_24dp"
        android:title="@string/title_ranking" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_account_black_24dp"
        android:title="@string/title_profile" />

</menu>
