<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:paddingBottom="@dimen/padding_vertical_player_match_details"
    android:paddingEnd="@dimen/padding_cardview_match"
    android:paddingStart="@dimen/padding_cardview_match"
    android:paddingTop="@dimen/padding_vertical_player_match_details">

    <TextView
        android:id="@+id/position_player_ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/position_player"
        android:textSize="@dimen/text_medium_size" />

    <!-- Player image -->
    <ImageView
        android:id="@+id/image_player_ranking"
        android:layout_width="@dimen/image_size_profile_match"
        android:layout_height="@dimen/image_size_profile_match"
        android:layout_marginEnd="@dimen/margin_horizontal_profiles_match"
        android:layout_marginStart="@dimen/margin_horizontal_profiles_match"
        android:layout_toEndOf="@+id/position_player_ranking"
        android:contentDescription="@string/image_player_description"
        android:src="@drawable/ic_profile_empty" />

    <!-- Player details -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/margin_elements_ranking"
        android:layout_toEndOf="@+id/image_player_ranking"
        android:layout_toStartOf="@+id/player_points"
        android:gravity="start"
        android:orientation="vertical">

        <!-- Player name -->
        <TextView
            android:id="@+id/name_player_ranking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_player"
            android:textSize="@dimen/text_medium_size"
            android:textStyle="bold" />

        <!-- Player level -->
        <TextView
            android:id="@+id/level_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_level_match"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_small_size" />

    </LinearLayout>

    <!-- Player points -->
    <TextView
        android:id="@+id/player_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/margin_elements_ranking"
        android:layout_toStartOf="@+id/suffix_points"
        android:text="@string/points_player"
        android:textSize="@dimen/text_medium_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/suffix_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/suffix_points_player"
        android:textSize="@dimen/text_small_size" />

</RelativeLayout>
