<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Toolbar -->
    <include
        android:id="@+id/appbar_main"
        layout="@layout/toolbar_back_title" />

    <ScrollView
        android:id="@+id/scrollView_preferences"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBackground"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/padding_preferences_playing">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_label_selected_preferences_playing"
                    android:text="@string/title_select_far_match"
                    android:textColor="@color/iconsEnabled"
                    android:textSize="@dimen/text_medium_size" />

                <!-- Location -->
                <TextView
                    android:id="@+id/location_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_location_preferences_playing"
                    android:background="@drawable/border_view"
                    android:drawableEnd="@drawable/arrow_down_gray"
                    android:drawablePadding="@dimen/drawable_padding_mail_edit_profile"
                    android:drawableStart="@drawable/location_gray"
                    android:gravity="center_vertical"
                    android:maxLines="@integer/max_lines_edit_profile"
                    android:paddingBottom="@dimen/padding_vertical_birthday"
                    android:paddingEnd="@dimen/padding_horizontal_birthday"
                    android:paddingStart="@dimen/padding_horizontal_birthday"
                    android:paddingTop="@dimen/padding_vertical_birthday"
                    android:text="@string/hint_location_edit_profile"
                    android:textColor="@color/iconsDisabled"
                    android:textSize="@dimen/text_medium_size" />

                <com.xw.repo.BubbleSeekBar
                    android:id="@+id/seek_bar_preferences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_seekbar_preferences_playing"
                    app:bsb_bubble_color="@color/accent"
                    app:bsb_bubble_text_color="@color/white"
                    app:bsb_max="20"
                    app:bsb_min="0"
                    app:bsb_progress="10"
                    app:bsb_second_track_color="@color/accent"
                    app:bsb_section_count="5"
                    app:bsb_section_text_position="bottom_sides"
                    app:bsb_show_progress_in_float="true"
                    app:bsb_show_section_mark="true"
                    app:bsb_show_section_text="true"
                    app:bsb_show_thumb_text="true"
                    app:bsb_track_color="@color/iconsDisabled" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_schedule_label_preferences_playing"
                android:background="@color/darkBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/padding_horizontal_preferences_playing"
                    android:paddingStart="@dimen/padding_horizontal_preferences_playing"
                    android:text="@string/label_schedule_preferences_playing"
                    android:textColor="@color/iconsEnabled"
                    android:textSize="@dimen/text_big_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_customize_schedule_label_preferences_playing"
                    android:paddingEnd="@dimen/padding_horizontal_preferences_playing"
                    android:paddingStart="@dimen/padding_horizontal_preferences_playing"
                    android:text="@string/custom_label_schedule_preferences_playing" />

                <!-- Tab layout -->
                <android.support.design.widget.TabLayout
                    android:id="@+id/tab_gender"
                    style="@style/TabLayoutRanking"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_tablayout_ranking"
                    android:layout_marginTop="@dimen/margin_top_tab_layout_preferences_playing">

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_tab_monday" />

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_tab_tuesday" />

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_tab_wednesday" />

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_tab_thursday" />

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_tab_friday" />

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_tab_saturday" />

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_tab_sunday" />

                </android.support.design.widget.TabLayout>

                <include layout="@layout/layout_schedule_preferences" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
